kubeflow/helm/pipelines/dryrun/webapp/kubeflow-pipelines-web-app_Deployment.yml
# Source: pipelines/templates/web-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeflow-pipelines-web-app
  namespace: kubeflow
  labels:
    helm.sh/chart: pipelines-0.1.89
    app: pipelines
    app.kubernetes.io/name: pipelines
    app.kubernetes.io/instance: kubeflow
    app.kubernetes.io/version: "1.8.1"
    version: "1.8.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pipelines
      app.kubernetes.io/name: pipelines
      app.kubernetes.io/instance: kubeflow
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
        sidecar.istio.io/inject: "true"
      labels:
        app: pipelines
        app.kubernetes.io/name: pipelines
        app.kubernetes.io/instance: kubeflow
    spec:
      serviceAccountName: kubeflow-pipelines-web-app
      securityContext: {}
      containers:
        - name: pipelines-web-app
          securityContext: {}
          image: "gcr.io/ml-pipeline/frontend:1.8.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: website
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            exec:
              command:
                - wget
                - -q
                - -S
                - -O
                - '-'
                - http://localhost:3000/apis/v1beta1/healthz
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            exec:
              command:
                - wget
                - -q
                - -S
                - -O
                - '-'
                - http://localhost:3000/apis/v1beta1/healthz
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 2
          resources: {}
          volumeMounts:
            - mountPath: /etc/config
              name: config-volume
              readOnly: true
      volumes:
        - configMap:
            name: kubeflow-pipelines-web-app-viewer-template
          name: config-volume
