kubeflow/helm/pipelines/dryrun/webapp/kubeflow-pipelines-web-app_Service.yml
# Source: pipelines/templates/web-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubeflow-pipelines-web-app
  namespace: kubeflow
  labels:
    helm.sh/chart: pipelines-0.1.89
    app: pipelines
    app.kubernetes.io/name: pipelines
    app.kubernetes.io/instance: kubeflow
    app.kubernetes.io/version: "1.8.1"
    version: "1.8.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: website
      protocol: TCP
      name: http-website
  selector:
    app: pipelines
    app.kubernetes.io/name: pipelines
    app.kubernetes.io/instance: kubeflow
