kubeflow/helm/pipelines/dryrun/webapp/kubeflow-pipelines-web-app_DestinationRule.yml
# Source: pipelines/templates/web-app/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  labels:
    helm.sh/chart: pipelines-0.1.89
    app: pipelines
    app.kubernetes.io/name: pipelines
    app.kubernetes.io/instance: kubeflow
    app.kubernetes.io/version: "1.8.1"
    version: "1.8.1"
    app.kubernetes.io/managed-by: Helm
  name: kubeflow-pipelines-web-app
  namespace: kubeflow
spec:
  host: kubeflow-pipelines-web-app.kubeflow.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
