kubeflow/helm/pipelines/dryrun/webapp/kubeflow-pipelines-web-app_AuthorizationPolicy.yml
# Source: pipelines/templates/web-app/authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  labels:
    helm.sh/chart: pipelines-0.1.89
    app: pipelines
    app.kubernetes.io/name: pipelines
    app.kubernetes.io/instance: kubeflow
    app.kubernetes.io/version: "1.8.1"
    version: "1.8.1"
    app.kubernetes.io/managed-by: Helm
  name: kubeflow-pipelines-web-app
  namespace: kubeflow
spec:
  rules:
    - from:
        - source:
            namespaces:
              - istio
  selector:
    matchLabels:
      app: pipelines
      app.kubernetes.io/name: pipelines
      app.kubernetes.io/instance: kubeflow
